[project]
name = "duckdb-sql-demos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.2.1",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "seaborn>=0.13.2",
]
